--- a/frontend/src/pages/Courses.css
+++ b/frontend/src/pages/Courses.css
@@ -63,6 +63,50 @@
   animation: bounce 2s infinite;
 }
 
+.course_id
+{
+  width: 80%;
+  height: auto;
+  position: relative;
+}
+
+.course-image
+{
+  position: fixed;
+  top:0%;
+  left: 0%;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  backdrop-filter: blur(8px);
+  /* opacity: 0.6; */
+  z-index: 1001;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  display: flex;
+}
+
+.course_img{
+  width: auto;
+  height: 90vh;
+  z-index: 1002;
+  opacity: 1;
+  display: block;
+}
+
+.closebtn
+{
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  cursor: pointer;
+  z-index: 1003;
+  display: block;
+}
+
 .course-category {
   display: inline-block;
   background: linear-gradient(135deg, #FF6B9D 0%, #FF8B42 100%);
